# 22209-Bitochkin

./: .gitmodules  README.md
build-lab2-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake
build-lab2-Desktop-Debug/.cmake/api/v1/reply.prev/: index-2023-09-27T15-20-27-0398.json  target-AppLib-Debug-30f023be6b6cb44993ae.json  target-CanvasLib-Debug-90d9ac3ec1759db5b622.json  target-LifeLib-Debug-480a14c1bcd75efcd1f7.json  target-NeighborhoodSelectLib-Debug-1d0414f2c1bf4b203e50.json  target-untitled-Debug-057c301cd08d2cb4fcdf.json
build-lab2-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-lab2-Desktop-Debug/.qtc_clangd/: compile_commands.json
build-lab2-Desktop-Debug/App/: Makefile  cmake_install.cmake
build-lab2-Desktop-Debug/Life/: Makefile  cmake_install.cmake
build-lab2-Desktop-Debug/UI/Canvas/: Makefile  cmake_install.cmake
build-lab2-Desktop-Debug/UI/NeighborhoodSelect/: Makefile  cmake_install.cmake
build-lab2-Desktop-Debug/types/: Makefile  cmake_install.cmake
c++/lab0/: .clang-format  README.md
c++/lab0/src/counter/: row.cpp  row.h
c++/lab1/: CMakeLists.txt  README.md
c++/lab1/src/: BitArray.cpp  BitArray.h
c++/lab1/tests/: BitArrayOperators.cpp
c++/lab2/: .gitignore
c++/lab2/App/: main.cpp
c++/lab2/App/FileWorker/: FileWorker.cpp
c++/lab2/App/Kernel/Life/: Arena.cpp  Life.h
c++/lab3/SoundProcessor/: CMakeLists.txt
c++/lab3/SoundProcessor/lib/Converter/: CMakeLists.txt
c++/lab3/SoundProcessor/lib/Converter/include/: crop.h  mix.h
c++/lab3/SoundProcessor/lib/Converter/src/: crop.cpp  noise.cpp
c++/lab4/App/: CMakeLists.txt
c++/lab4/App/src/: main.cpp
java/game/: build.gradle
java/game/assets/config/: anime  box2d  map  ui
java/game/assets/factory/: moveable
java/game/assets/sprites/: atlas.pxo  atlas.tsx  main.tiled-session  main.tmx  test.pxo  test_scale.pxo
java/game/core/src/: MyGdxGame.gwt.xml
java/game/desktop/: build.gradle
java/game/html/: build.gradle
java/gogledoc/: .env  README.md  docker-compose.yml  prepare_jar.sh
java/gogledoc/client/: Dockerfile  dependency-reduced-pom.xml  pom.xml
java/gogledoc/server/: Dockerfile  README.md  chat.txt  data.txt  dependency-reduced-pom.xml  log  pom.xml
java/gogledoc/webview/: CONST.ts  README.md  index.html  package.json
java/gogledoc/webview/src/: App.tsx  CONST.ts  main.tsx
java/lab0/statcsv/: pom.xml
java/lab1/StackCalc/: pom.xml  script
lab0/: .clang-format  CMakeLists.txt
lab0/src/: main.cpp
lab0/src/counter/: CMakeLists.txt  counter.cpp  counter.h  row.cpp  row.h
lab1/: .clang-format  CMakeLists.txt
lab1/src/: BitArray.cpp  CMakeLists.txt  main.cpp  utils.cpp  utils.h
lab1/src/BitArray/: BitArray.cpp  BitArray.h  CMakeLists.txt
lab1/tests/: BitArrayConst.cpp  BitArrayContructor.cpp  BitArrayFunctions.cpp  BitArrayOperators.cpp  BitArrayTest.cpp  CMakeLists.txt
lab2/: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
lab2/App/: App.cpp  App.h  CMakeLists.txt  main.cpp
lab2/App/FileWorker/: FileWorker.cpp  FileWorker.h
lab2/App/Kernel/: CMakeLists.txt
lab2/App/Kernel/Life/: Arena.cpp  Arena.h  Life.cpp  Life.h
lab2/App/Kernel/types/: TNeighborhood.h  TRules.h
lab2/App/Life/: Life.cpp  Life.h
lab2/App/StateStorage/: StateStorage.cpp  StateStorage.h
lab2/App/types/: TNeighborhood.cpp  TNeighborhood.h  TRules.cpp  TRules.h
lab2/App/ui/Canvas/: Canvas.cpp  Canvas.h
lab2/App/ui/Conf/: Conf.cpp  Conf.h  conf.ui
lab2/App/ui/NeighborhoodSelect/: NeighborhoodSelect.cpp  NeighborhoodSelect.h  neighborhoodselect.ui
lab2/App/ui/Panel/: Panel.cpp  Panel.h  panel.ui
lab2/App/ui/Rule/: Rule.cpp  Rule.h  rule.ui
lab2/App/ui/Stepper/: Stepper.cpp  Stepper.h  stepper.ui
lab2/App/ui/mainwindow/: MainWindow.cpp  MainWindow.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab2/App/ui/neighborhoodselect/: neighborhoodselect.cpp  neighborhoodselect.h  neighborhoodselect.ui
lab2/App/ui/panel/: Panel.cpp  Panel.h  panel.cpp  panel.h  panel.ui
lab2/App/ui/rule/: rule.cpp  rule.h  rule.ui
lab2/App/ui/settings/: conf.cpp  conf.h  conf.ui
lab2/App/ui/stepper/: stepper.cpp  stepper.h  stepper.ui
lab2/CmdManager/: CMakeLists.txt  CmdManager.cpp  CmdManager.h
lab2/Life/: CMakeLists.txt  Life.cpp  Life.h
lab2/Life/GameArena/: CMakeLists.txt  GameArena.cpp  GameArena.h
lab2/UI/Canvas/: CMakeLists.txt  Canvas.cpp  Canvas.h
lab2/UI/NeighborhoodSelect/: CMakeLists.txt  NeighborhoodSelect.cpp  NeighborhoodSelect.h
lab2/tst/: CMakeLists.txt  Life-test.cpp
lab2/types/: CMakeLists.txt  Rules.cpp  Rules.h  TNeighborhood.cpp  TNeighborhood.h  TRules.h
lab3/: README.md
lab3/SoundProcessor/: CMakeLists.txt  SoundProcessor  main.cpp
lab3/SoundProcessor/ArgParser/: ArgParser.cpp  ArgParser.h  CMakeLists.txt  TFile.cpp
lab3/SoundProcessor/Configurator/: CMakeLists.txt  Configurator.cpp  Configurator.h
lab3/SoundProcessor/examples/: config.txt
lab3/SoundProcessor/lib/ArgParser/: ArgParser.cpp  ArgParser.h  TFile.cpp  TFile.h
lab3/SoundProcessor/lib/Configurator/: CMakeLists.txt  Configurator.cpp  Configurator.h  ConverterConfig.cpp  ConverterConfig.h
lab3/SoundProcessor/lib/Converter/: CMakeLists.txt
lab3/SoundProcessor/lib/Converter/include/: converter.h  converterFactory.h  crop.h  cut.h  mix.h  mute.h  noise.h
lab3/SoundProcessor/lib/Converter/src/: converterFactory.cpp  crop.cpp  cut.cpp  mix.cpp  mute.cpp  noise.cpp
lab3/SoundProcessor/lib/Converter/test/: converter_tests.cpp
lab3/SoundProcessor/lib/ErrorHandler/: CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.h
lab3/SoundProcessor/lib/WAV/: CMakeLists.txt
lab3/SoundProcessor/lib/WAV/include/: reader.h  wav.h  writer.h
lab3/SoundProcessor/lib/WAV/src/: reader.cpp  writer.cpp
lab3/SoundProcessor/lib/WAV/test/: wav_tests.cpp
lab3/SoundProcessor/src/: main.cpp
lab3/SoundProcessor/src/Processor/: Processor.cpp  Processor.h  StepAlgo.h
lab4/: README.md
lab4/App/: CMakeLists.txt
lab4/App/examples/: 1.csv
lab4/App/src/: main.cpp
lab4/App/src/parser/: CMakeLists.txt  IFStream.h  TuplePrint.h  TupleUtil.h  parser.h
(+323 files in other folders)
